# LSPT-Search-Engine-Indexing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: API.cpp  database.cpp  database.h  func.cpp  func.h  hello.cpp  main.cpp  test.json
testing/: remove_document.cpp  retrieve_document_by_indexID.cpp  run_indexing_algorithm.cpp
